# vh-mpc-example

./: CMakeLists.txt  README.md  VH_MPC_closed_loop_nominal.cpp  VH_MPC_closed_loop_recursive.cpp  VH_MPC_test_nominal.cpp  VH_MPC_test_recursive.cpp
include/: VH_MPC.h  quad_dynamics.h
src/: VH_MPC.cpp  quad_dynamics.cpp
